--- a/springMVC/Books/pom.xml
+++ b/springMVC/Books/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.0-SNAPSHOT</version>
+		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.codingdojo.books</groupId>
@@ -51,9 +51,30 @@
 		<dependency>
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-validation</artifactId>
-    	</dependency>   
-
-
+    	</dependency>
+    	<dependency>
+        		<groupId>org.apache.tomcat.embed</groupId>
+        		<artifactId>tomcat-embed-jasper</artifactId>
+    		</dependency>
+    		<dependency>
+        		<groupId>jakarta.servlet.jsp.jstl</groupId>
+        		<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+    		</dependency>
+    		<dependency>
+        		<groupId>org.glassfish.web</groupId>
+        		<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+    		</dependency>
+    		<dependency>
+        		<groupId>org.webjars</groupId>
+        		<artifactId>webjars-locator</artifactId>
+        		<version>0.46</version>
+    		</dependency>
+    		<!-- BOOTSTRAP DEPENDENCIES -->
+    		<dependency>
+        		<groupId>org.webjars</groupId>
+        		<artifactId>bootstrap</artifactId>
+        		<version>5.2.3</version>
+    		</dependency>
 	</dependencies>
 
 	<build>
